# eventuary-data

./: .dockerignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  dockerfile  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: CI.yml  python-app.yml  ruff.yml
src/test/: test_placeholder.py
